Fixed bug where text was overlapping from about me section onto mixes section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,6 @@ h2, h3 {
 
 header, section {
     margin: 0;
-    height: 95vh;
     
 }
 section {
@@ -58,7 +57,8 @@ nav {
     background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover;
-    margin: 0; 
+    margin: 0;
+    height: 90vh; 
 }
 
 
@@ -78,6 +78,7 @@ nav {
 
 .bio {
     font-family: 'Roboto';
+    
 }
 
 #about_me {
@@ -85,9 +86,9 @@ nav {
     margin-bottom: 0;
     padding-top: 10px;
     padding-bottom: 10px;
-    min-height: 90%;
     
 }
+
 /* mixes styles*/
 
 iframe {
@@ -131,7 +132,7 @@ label {
 .form-area {
     margin-top: 10vh;
     margin-bottom: 10vh;
-
+    padding: 10px;
 }
 
 /*footer styles */
@@ -150,3 +151,5 @@ footer i {
 footer {
     background-color: #343a40;
 }
+
+
